[metadata]
name = EmptySpaceSearch
version = 0.2.0
author = Mário Antunes
author_email = mario.antunes@ua.pt
description = Empty Space Search
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/mariolpantunes/ess
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.12
install_requires =
    numpy>=2.4.0
    faiss-cpu>=1.13.2

[options.packages.find]
where = src
